--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <title>Stream TV and Movies Live and Online | Hulu</title>
-    <link rel="icon" href="favicon.ico.png">
+    <link rel="icon" href="./favicon.ico.png">
   </head>
   <body>
     <header class="header">
@@ -21,7 +21,7 @@
 
       <div class="header-content">
         <h4>Try up to one month free</h4>
-        <img src="logo.png" alt="Hulu" class="logo">
+        <img src="./logo.png" alt="Hulu" class="logo">
         <div class="header-text-1">Watch thousands of Movies and TV Shows.</div>
         <div class="header-text-2">
           Get HBO Max™, SHOWTIME®, CINEMAX® and STARZ® available as add-ons.
@@ -34,7 +34,7 @@
     </header>
 
     <section class="sub-header">
-      <img src="logos.png" alt="">
+      <img src="./logos.png" alt="">
       <div>
         <h4>Bundle with any Hulu plan & save</h4>
         <h3>Get Hulu, Disney+, and ESPN+.</h3>
@@ -113,16 +113,16 @@
 
         <div class="live-sports-logos">
           <div>
-            <img src="live-sports-logo-1.png" alt="">
+            <img src="./live-sports-logo-1.png" alt="">
           </div>
           <div>
-            <img src="live-sports-logo-2.png" alt="">
+            <img src="./live-sports-logo-2.png" alt="">
           </div>
           <div>
-            <img src="live-sports-logo-3.svg" alt="">
+            <img src="./live-sports-logo-3.svg" alt="">
           </div>
           <div>
-            <img src="live-sports-logo-4.png" alt="">
+            <img src="./live-sports-logo-4.png" alt="">
           </div>
         </div>
 
@@ -176,10 +176,10 @@
         <div class="divider"></div>
 
         <div class="social-icons">
-          <a href="#"><img src="facebook.svg" alt=""></a>
-          <a href="#"><img src="twitter.svg" alt=""></a>
-          <a href="#"><img src="youtube.svg" alt=""></a>
-          <a href="#"><img src="instagram.svg" alt=""></a>
+          <a href="#"><img src="./facebook.svg" alt=""></a>
+          <a href="#"><img src="./twitter.svg" alt=""></a>
+          <a href="#"><img src="./youtube.svg" alt=""></a>
+          <a href="#"><img src="./instagram.svg" alt=""></a>
         </div>
       </div>
     </footer>
@@ -204,7 +204,7 @@
         <div class="modal-footer">
           <p>Don't have an account? <a href="#">Start your free trial</a></p>
         </div>
-        <img class="close" src="close.svg" alt="close">
+        <img class="close" src="./close.svg" alt="close">
       </div>
     </div>
   </body>
